cmake_minimum_required(VERSION 3.16)
file(GLOB SRCS "./src/*.cpp")
project(hetpibt)
add_library(${PROJECT_NAME} STATIC ${SRCS})
if(MSVC)
  target_compile_options(${PROJECT_NAME} PUBLIC /W3 /permissive-)
else()
  target_compile_options(${PROJECT_NAME} PUBLIC -O3 -Wall -mtune=native -march=native)
endif()
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
target_include_directories(${PROJECT_NAME} INTERFACE ./include)
